--- a/snap-server/build.gradle
+++ b/snap-server/build.gradle
@@ -14,6 +14,10 @@ repositories {
 }
 
 dependencies {
+    compile "com.google.api-client:google-api-client:1.23.0"
+    compile "com.google.oauth-client:google-oauth-client-jetty:1.23.0"
+    compile "com.google.apis:google-api-services-sheets:v4-rev492-1.23.0"
+    compile 'com.google.apis:google-api-services-drive:v3-rev90-1.23.0'
     compile "io.dropwizard:dropwizard-core:1.2.1"
     compile "org.openpnp:opencv:3.2.0-1"
     compile "org.projectlombok:lombok:1.16.12"
