--- a/snap-server/build.gradle
+++ b/snap-server/build.gradle
@@ -15,13 +15,18 @@ repositories {
 
 dependencies {
     compile "com.google.api-client:google-api-client:1.23.0"
-    compile "com.google.oauth-client:google-oauth-client-jetty:1.23.0"
     compile "com.google.apis:google-api-services-sheets:v4-rev492-1.23.0"
+    compile "com.google.cloud:google-cloud-vision:1.12.0"
+    compile "com.google.oauth-client:google-oauth-client-jetty:1.23.0"
     compile "io.dropwizard:dropwizard-core:1.2.1"
     compile "org.openpnp:opencv:3.2.0-1"
     compile "org.projectlombok:lombok:1.16.12"
 
     testCompile "junit:junit:4.12"
+}
+
+configurations.all {
+    exclude group: "com.google.guava", module: "guava-jdk5"
 }
 
 task run(type: JavaExec) {
