--- a/snap-server/build.gradle
+++ b/snap-server/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 
 configurations.all {
     exclude group: "com.google.guava", module: "guava-jdk5"
+    exclude group: "org.mortbay.jetty", module: "servlet-api"
 }
 
 task run(type: JavaExec) {
