--- a/snap-server/build.gradle
+++ b/snap-server/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     compile "com.google.cloud:google-cloud-vision:1.12.0"
     compile "com.google.oauth-client:google-oauth-client-jetty:1.23.0"
     compile "io.dropwizard:dropwizard-core:1.2.1"
+    compile "org.jsoup:jsoup:1.10.3"
     compile "org.openpnp:opencv:3.2.0-1"
     compile "org.projectlombok:lombok:1.16.12"
 
