--- a/snap-server/build.gradle
+++ b/snap-server/build.gradle
@@ -1,7 +1,13 @@
+import de.undercouch.gradle.tasks.download.Download
+
 buildscript {
     repositories {
         jcenter()
     }
+}
+
+plugins {
+    id "de.undercouch.download" version "3.3.0"
 }
 
 apply plugin: 'java'
@@ -31,7 +37,13 @@ configurations.all {
     exclude group: "org.mortbay.jetty", module: "servlet-api"
 }
 
+task downloadDictionary(type: Download) {
+    src "https://raw.githubusercontent.com/dwyl/english-words/master/words_alpha.txt"
+    dest "data/dictionary.txt"
+}
+
 task run(type: JavaExec) {
+    dependsOn downloadDictionary
     classpath project.sourceSets.main.runtimeClasspath
     main "com.kyc.snap.SnapServer"
     args("server", "config.yml")
